<resources>
    <string name="app_name">Indotiki</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_list">Booking List </string>
    <string name="action_filter">Booking Filter Type</string>
    <string name="action_logout">Logout</string>
    <string name="search_hint">Search</string>
    <string name="pencarian">Search Result</string>
    <string name="search_title">Title</string>
    <string name="booking_transport_confirm">Confirm Transport Booking</string>
    <string name="booking_courier_confirm">Confirm Courier Booking</string>
    <string name="booking_courier_in_progress">Courier in Progress</string>
    <string name="booking_transport_in_progress">Transport in Progress</string>
    <string name="booking_food_in_progress">Food in Progress</string>
    <string name="booking_pending_notification">Pending Booking</string>
    <string name="booking_accepted_notification">Congratulations! our driver has accepted your booking!</string>
    <string name="booking_desc_notification">Click to navigate to booking list</string>
    <string name="booking_data">Booking Data</string>
    <string name="easy_and_efficient">Easy and Efficient</string>
    <string name="news">News</string>
    <string name="pending">Pending</string>
    <string name="no_booking_progress">No Booking Progress</string>
    <string name="success">Success</string>
    <string name="FROM">FROM</string>
    <string name="from">From</string>
    <string name="TO">TO</string>
    <string name="name">Name</string>
    <string name="pay_with">Payment</string>
    <string name="additional_contact_sender">Additional Sender\'s contact</string>
    <string name="additional_contact_receiver">Additional Receiver\'s contact</string>
    <string name="you_are">You are a</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="no_one">No One</string>
    <string name="add_from_contacts">Add from contacts</string>
    <string name="items_to_deliver">Items to deliver</string>
    <string name="select_photo">Select Photo</string>
    <string name="items_to_deliver_desc">Items should not exceed 70cm (Length) , 50cm (width) , 50 cm (height) OR weight more than 20 kg</string>
    <string name="items_to_deliver_pict_desc">Items pictures taken should be have position that sender hand is holding the item</string>
    <string name="origin_empty">Please choose your origin place.</string>
    <string name="destination_empty">Please choose your destination place.</string>
    <string name="location_detail_from_empty">Sender location detail must be filled.</string>
    <string name="fullname_from_empty">Sender name detail must be filled.</string>
    <string name="phone_from_empty">Sender phone number must be filled.</string>
    <string name="location_detail_to_empty">Receiver location detail must be filled.</string>
    <string name="fullname_to_empty">Receiver name detail must be filled.</string>
    <string name="phone_to_empty">Receiver phone number detail must be filled.</string>
    <string name="items_deliver_empty">Items to deliver must be filled.</string>
    <string name="sender_receiver_empty">One of the sender or receiver field must be filled.</string>
    <string name="sender_receiver_same1">User phone number must not be same with receiver phone number.</string>
    <string name="sender_receiver_same2">Sender phone number must not be same with receiver phone number.</string>
    <string name="sender_receiver_same3">Sender phone number must not be same with receiver phone number.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="start">Start</string>
    <string name="goal">Goal</string>
    <string name="booking_time_from_passenger">Booking time from passenger</string>
    <string name="accepted_time">Accepted Time</string>
    <string name="rate_driver_service">Rate Driver Service</string>
    <string name="no_booking_history">No Booking History</string>
    <string name="BOOKING_THIS_TRIP_AGAIN">Booking this trip again</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="tap_on_the_image_to_upload_photo">Tap on the image to upload photo</string>
    <string name="option_get_picture">Select option to get photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="finish">Finish</string>
    <string name="feature_unavailable">Sorry, this feature is not available yet</string>
    <string name="searching_your_driver">Searching your Driver</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="no_driver_sorry">Sorry, no driver accepted your booking</string>
    <string name="try_in_5_seconds">we will try again in 5 seconds</string>
    <string name="location_detail">Location Detail</string>
    <string name="confirm">Confirm</string>
    <string name="booking_transport_new_frequent">The location you have visited or add as favorite</string>
    <string name="booking_transport_new_google">Fill textbox above to find a location. min 2 char</string>
    <string name="use_this_location">Use this location</string>
    <string name="place_name">Place Name</string>
    <string name="place_name_set">Place Name(Click to set)</string>
    <string name="location">Location</string>
    <string name="tap_to_choose_nearby_origin_place">Tap to choose origin </string>
    <string name="tap_to_choose_destination_place">Tap to choose destination </string>
    <string name="next">Next</string>
    <string name="eReceipt">E-Receipt</string>
    <string name="booking_number">Booking Number</string>
    <string name="booking_time">Booking Time</string>
    <string name="booking_complete_time">Booking Complete Time</string>
    <string name="distance_run">Distance Run</string>
    <string name="meteran_fare">Meteran Fare</string>
    <string name="peak_hour_charge">Peak Hour Charge</string>
    <string name="current_booking_charge">Current booking charge</string>
    <string name="total_fare">Total Fare</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="paid_by">Paid By</string>
    <string name="recipient_email">Recipient Email</string>
    <string name="send_email">Send Email</string>
    <string name="transportation_service">Transportation Service</string>
    <string name="motorcycle_taxi">Motorcycle</string>
    <string name="pedicab">Pedicab</string>
    <string name="taxi">Taxi</string>
    <string name="taxi4">Taxi 4 seater</string>
    <string name="taxi6">Taxi 6 seater</string>
    <string name="wait_a_driver">Searching your driver...</string>
    <string name="register_member">Register Member</string>
    <string name="register">Register</string>
    <string name="fullname">Fullname</string>
    <string name="fullname_desc">Fullname only can be changed one time</string>
    <string name="email">Email</string>
    <string name="birthdate">BirthDate</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="year">Year</string>
    <string name="date_valid">Please select your birthdate.</string>
    <string name="month_valid">Please select your birthmonth.</string>
    <string name="year_valid">Please select your birthyear.</string>
    <string name="phone_valid">Please enter your phone number.</string>
    <string name="phone_valid2">Phone number min 10 number.</string>
    <string name="email_valid">Email is not valid.</string>
    <string name="email_valid2">Please enter your email.</string>
    <string name="fullname_valid">Please enter your fullname.</string>
    <string name="birthdate_desc">Shop ticket will be given at birthday.</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="need_sms_verification">Need SMS verification</string>
    <string name="phone2">Phone Number</string>
    <string name="verification">Enter code verification that sent to registered phone number</string>
    <string name="verification2">Enter verification code</string>
    <string name="verification3">Did not get SMS code?</string>
    <string name="verification4">Re-send verification code</string>
    <string name="booking_list">List</string>
    <string name="booking_progress">Progress</string>
    <string name="booking_complete">Complete</string>
    <string name="motorcycle_taxi_transport">Motorcycle Transportation</string>
    <string name="pedicab_transport">Pedicab Transportation</string>
    <string name="taxi_transport">Taxi Transportation</string>
    <string name="motorcycle_taxi_courier">Motorcycle Courier</string>
    <string name="pedicab_courier">Pedicab Courier</string>
    <string name="enter_message">Enter a message</string>
    <string name="local_service_started">Started</string>
    <string name="local_service_stopped">Stopped</string>
    <string name="local_service_label">Indotiki</string>
    <string name="local_service_connected">Connected</string>
    <string name="local_service_disconnected">Disconnected</string>
    <string name="remote_service_started">remote is Started</string>
    <string name="remote_service_stopped">remote is Stopped</string>
    <string name="target">TARGET</string>
    <string name="favorite">FAVORITE</string>
    <string name="map">MAP</string>
    <string name="no_result">No result found</string>
    <string name="booking_map">Booking Map</string>
    <string name="get_place_data">Get place data...</string>
    <string name="new_booking">New Booking</string>
    <string name="exit_confirmation">Are you sure you want to quit?</string>
    <string name="cancel_confirmation">Are you sure you want to cancel this booking?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="service_unavailable">Sorry, this service is unavailable in this place</string>
    <string name="service_unavailable2">Only allow access from Indonesia</string>
    <string name="item_transport">Transportation</string>
    <string name="item_food">Food</string>
    <string name="item_shopping">Shopping</string>
    <string name="item_courier">Courier</string>
    <string name="distance_valid">The distance passed over 25 km</string>
    <string name="location_valid">Pick up location and Destination location cannot be same</string>
    <string name="cancelled_by_user">Cancelled by user</string>
    <string name="please_wait">Please Wait...</string>
    <string name="booking_accepted">Your booking has been accepted by the driver</string>
    <string name="booking_no_accepted">No nearby driver can accept your booking, please try again later.</string>
    <string name="try_refresh">Try again</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_deposit_log">No Inki-Pay log</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="dont_use_call_feature">Block rider\'s call.</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number_info">Please enter your phone number. We will send a verification code.</string>
    <string name="splash_screen_error">We could not connect to our server. Please check your connection or try again in a few minutes.</string>
</resources>