<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:background="#3b3b3b">
	<RelativeLayout
		android:layout_width="fill_parent"
		android:gravity="center"
		android:layout_height="fill_parent">
		<com.airbnb.lottie.LottieAnimationView
			android:id="@+id/loading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			app:lottie_fileName="images/logo/data.json"
			app:lottie_imageAssetsFolder="images/logo"
			app:lottie_loop="true"
			app:lottie_autoPlay="true"/>
		<TextView
			android:id="@+id/logoText"
			android:text="@string/easy_and_efficient"
			android:textColor="#ffffff"
			android:textSize="@dimen/text_medium"
			android:layout_centerInParent="true"
			android:layout_marginTop="@dimen/common_padding_margin"
			android:layout_below="@id/loading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<android.support.v7.widget.CardView
			android:id="@+id/error_layout"
			android:layout_marginLeft="20dp"
			android:layout_marginRight="20dp"
			android:layout_marginTop="@dimen/common_padding_margin"
			android:layout_centerInParent="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/white"
			app:cardCornerRadius="2dp"
			app:cardElevation="2dp"
			android:visibility="gone"
			android:layout_below="@+id/loading"
			app:cardPreventCornerOverlap="false"
			app:contentPadding="10dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="SORRY"
					android:gravity="center"
					android:textStyle="bold"
					android:textSize="@dimen/text_medium"
					android:textColor="@color/black"/>

				<TextView
					android:layout_marginTop="@dimen/common_padding_margin"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/splash_screen_error"
					android:gravity="center"
					android:textSize="@dimen/text_medium"
					android:textColor="@color/black"
					android:id="@+id/textView4" />

				<Button
					android:id="@+id/bt_try_again"
					android:visibility="visible"
					android:layout_marginTop="@dimen/common_padding_margin"
					android:padding="@dimen/common_padding_margin"
					android:layout_width="match_parent"
					android:textSize="@dimen/text_small"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/try_refresh"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

	</RelativeLayout>
</LinearLayout>
