<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutLoginPhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="invisible"
    android:padding="@dimen/large_padding_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_margin"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_phone_number_info"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/text_mediocre"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_margin"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvPhoneNumberHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+62"
                android:textColor="@color/white"
                android:background="@drawable/xml_bg_rounded_border_white_3dp"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/common_padding_margin"
                android:textSize="@dimen/text_mediocre"/>
            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:textSize="@dimen/text_mediocre"
                android:textColorHint="@color/grey_200"
                android:gravity="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/grey_200"
                android:maxLength="15"
                android:layout_marginLeft="@dimen/common_padding_margin"
                android:padding="@dimen/common_padding_margin"
                android:inputType="number"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvPhoneNumberValid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_valid"
            android:visibility="gone"
            android:textColor="@color/red_600"
            android:gravity="center"
            android:textSize="@dimen/text_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/common_padding_margin">
            <LinearLayout
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/xml_bg_rounded_border_white_3dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/next"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:paddingLeft="@dimen/large_padding_margin"
                    android:paddingRight="@dimen/large_padding_margin"
                    android:layout_marginTop="@dimen/common_padding_margin"
                    android:layout_marginBottom="@dimen/common_padding_margin"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_medium"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>