<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/layoutEditProfile"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/grey_50"
	android:orientation="vertical">
	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
		<include layout="@layout/toolbar" />
	</android.support.design.widget.AppBarLayout>
	<include layout="@layout/view_loading_layout"/>
	<android.support.percent.PercentRelativeLayout
		android:id="@+id/layoutFormEditProfile"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:id="@+id/layout_banner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_heightPercent="30%"
			android:orientation="vertical">
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center"
				android:background="@drawable/bg_edit_profile"
				android:padding="@dimen/common_padding_margin"
				android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true">
			</RelativeLayout>
		</LinearLayout>
		<ImageView
			android:id="@+id/line"
			android:background="@color/grey_50"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_below="@+id/layout_banner"
			android:layout_above="@+id/edit_profile_form"/>
		<LinearLayout
			android:id="@+id/edit_profile_form"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			app:layout_heightPercent="70%"
			android:layout_below="@+id/layout_banner"
			android:orientation="vertical">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<EditText
					android:id="@+id/fullname"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/huge_padding_margin"
					android:layout_marginRight="@dimen/huge_padding_margin"
					android:gravity="center"
					android:hint="@string/fullname"
					android:imeOptions="actionNext"
					android:inputType="text"
					android:singleLine="true"
					android:textColor="@color/blue_300"
					android:textSize="@dimen/text_medium"
					android:textStyle="bold"
					android:theme="@style/EditProfile" />

				<TextView
					android:id="@+id/namevalid"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text=""
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textColor="#ff0000"
					android:visibility="gone" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<EditText
					android:id="@+id/nohp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/huge_padding_margin"
					android:layout_marginRight="@dimen/huge_padding_margin"
					android:layout_marginTop="@dimen/small_padding_margin"
					android:gravity="center"
					android:hint="@string/phone_number"
					android:imeOptions="actionNext"
					android:inputType="number"
					android:textColor="@color/blue_300"
					android:textSize="@dimen/text_medium"
					android:textStyle="bold"
					android:theme="@style/EditProfile" />

				<TextView
					android:id="@+id/nohpvalid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/common_padding_margin"
					android:text=""
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textColor="#ff0000"
					android:visibility="gone" />
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<EditText
					android:id="@+id/ed_email"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/huge_padding_margin"
					android:layout_marginRight="@dimen/huge_padding_margin"
					android:layout_marginTop="@dimen/small_padding_margin"
					android:gravity="center"
					android:hint="@string/email"
					android:singleLine="true"
					android:imeOptions="actionDone"
					android:inputType="textEmailAddress"
					android:textColor="@color/blue_300"
					android:textSize="@dimen/text_medium"
					android:textStyle="bold"
					android:theme="@style/EditProfile" />

				<TextView
					android:id="@+id/emailvalid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="@dimen/common_padding_margin"
					android:text=""
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textColor="#ff0000"
					android:visibility="gone" />
			</LinearLayout>

			<CheckBox
				android:id="@+id/block_call_feature"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/dont_use_call_feature"
				android:layout_marginLeft="@dimen/huge_padding_margin"
				android:layout_marginRight="@dimen/huge_padding_margin"
				android:layout_marginTop="@dimen/small_padding_margin"
				android:textSize="@dimen/text_small"
				android:visibility="visible" />
			<LinearLayout
				android:id="@+id/updateLayout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="@dimen/mediocre_padding_margin"
				android:background="@drawable/xml_bg_rounded_solid_blue_15dp">
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="@dimen/common_padding_margin"
					android:text="@string/edit_profile"
					android:textColor="@color/white"
					android:textSize="@dimen/text_small" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/fotoprofil_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_alignTop="@+id/line"
			android:layout_marginTop="@dimen/img_tiny2_size_half"
			android:orientation="vertical">
			<com.pmberjaya.indotiki.views.ImageViewRounded
				android:id="@+id/fotoprofil"
				android:layout_width="@dimen/img_tiny2_size"
				android:layout_height="@dimen/img_tiny2_size"
				android:layout_gravity="center"
				android:src="@mipmap/img_no_avatar" />
		</LinearLayout>
	</android.support.percent.PercentRelativeLayout>
</LinearLayout>